# prime-iroh

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: python-tests.yaml  release.yaml  rust-tests.yaml  test-release.yaml
examples/: bidirectional.rs  unidirectional.rs
pytests/: test_bidirectional.py  test_unidirectional.py
python/examples/: bidirectional.py  connection.py  unidirectional.py
python/tests/: test_connection.py
rust/src/: lib.rs  node.rs  sender.rs
rust/tests/: bidirectional.rs  connection.rs  unidirectional.rs
script/: install.sh
src/: bindings.rs  connect.rs  lib.rs  listen.rs  main.rs  node.rs  receiver.rs  sender.rs  work.rs
tests/: bidirectional.rs  connection.rs  test_bidirectional.py  test_connection.py  unidirectional.rs
