[package]
name = "prime_iroh"
version = "0.1.2"
edition = "2024"

[lib]
name = "prime_iroh"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.97"
iroh = "0.34.0"
tokio = "1.44.1"
rand = "0.8.5"
hex = "0.4.3"
pyo3 = { version = "0.24.0", features = ["extension-module"] }
log = "0.4.27"
env_logger = "0.11.8"

[features]
extension-module = []
