[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "prime_iroh"
version = "0.1.1"
authors = [{name = "Mika Senghaas", email = "mika@primeintellect.ai"}]
description = "P2P Pipeline Parallel Communication Backend built on top of Iroh, mimicking `torch.distributed` API"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]
license = {text = "MIT"}
license-files = ["LICENSE"]

[project.urls]
Documentation = "https://github.com/PrimeIntellect-ai/prime-iroh"
Repository = "https://github.com/PrimeIntellect-ai/prime-iroh"
Issues = "https://github.com/PrimeIntellect-ai/prime-iroh/issues"

[tool.maturin]
features = ["extension-module"]
generate-stubs = true
release = true

[tool.uv]
dev-dependencies = ["pytest", "maturin", "ruff", "pre-commit"]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "**/*.rs" },
]